Opened 10 years ago

Closed 10 years ago

#11775 closed bug (fixed)

app server crash after update to hrev48713

Reported by: vidrep Owned by: anevilyak
Priority: normal Milestone: R1
Component: Servers/app_server Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Updated to hrev48713 x86_gcc2. After reboot, any operation triggers the debugger. See attached screenshot. I also saved a debug report which I'll attach later.

Attachments (2)

IMG_0192.JPG (2.0 MB ) - added by vidrep 10 years ago.
app_server-430-debug-23-01-2015-10-55-59.report (23.3 KB ) - added by vidrep 10 years ago.

Download all attachments as: .zip

Change History (5)

by vidrep, 10 years ago

Attachment: IMG_0192.JPG added

comment:1 by anevilyak, 10 years ago

Owner: changed from axeld to pulkomandy
Status: newassigned

At a glance, this looks like it's due to http://cgit.haiku-os.org/haiku/tree/src/servers/app/drawing/BitmapDrawingEngine.cpp#n59 not checking if the bitmap is NULL before releasing its reference.

comment:2 by anevilyak, 10 years ago

Owner: changed from pulkomandy to anevilyak
Status: assignedin-progress

comment:3 by anevilyak, 10 years ago

Resolution: fixed
Status: in-progressclosed

Fixed in hrev48715.

Note: See TracTickets for help on using tickets.