Fix #11775.

BitmapDrawingEngine:
- Check if fBitmap is NULL before releasing its reference. Since this is
  the case when a BitmapDrawingEngine is instantiated, this would lead to
  an app_server crash upon any attempt to make use of one.